patient API and Controller